--- a/uma.html
+++ b/uma.html
@@ -9,6 +9,7 @@
 
 <body>
 <div style="margin-left: 5%; margin-top: 3%;">
+<img src="suma.jpg" style="width: 40%; margin-left: -5%">
 	<h1>SUMA</h1>
 	<h2>The Problem</h2>
 	<p>Users who are lending tend to want to lock in high interest rates, or at least do not want to see their interest rates fall.</p>
